--- a/app/views/paises/index.html.erb
+++ b/app/views/paises/index.html.erb
@@ -2,8 +2,7 @@
 
   <h4>Pa&iacute;ses</h4>
   <hr />
-
-
+<div style="text-align:center">
 <table id="paises" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
@@ -24,7 +23,7 @@
 <% end %>
 </tbody>
 </table>
-
+</div>
 <%= link_to 'Nuevo Pais', new_pais_path, :class => 'btn btn-info btnNuevo' %>
 </div>
 
