--- a/app/views/clientes/_contactos.html.erb
+++ b/app/views/clientes/_contactos.html.erb
@@ -1,7 +1,7 @@
-<div style="text-align:center">
-<h3> Contactos </h3>
 
-<table id="cliente_contactos" class="display" style="border: silver solid 1px; width: 900px; margin-left:auto;margin-right:auto;font-size: 11px">
+<h3> Contactos </h3>
+<hr />
+<table id="cliente_contactos" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
     <th>Nombre</th>
@@ -26,4 +26,3 @@
 
 <%= link_to 'Nuevo Contacto', new_cliente_clientes_contacto_path(@cliente), :class => 'btn btn-info btnNuevo' %>
 
-</div>
