--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -4,7 +4,7 @@
   <hr>
 
 
-<table id="clientes" class="display" style="border: silver solid 1px; width: 900px; margin-left:auto;margin-right:auto;font-size: 11px;">
+<table id="clientes" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
     <th>Raz&oacute;n Social</th>
