--- a/app/views/provincias/index.html.erb
+++ b/app/views/provincias/index.html.erb
@@ -4,7 +4,7 @@
   <hr>
 
 
-<table id="provincias" class="display" style="border: silver solid 1px; width: 700px; margin-left:auto;margin-right:auto;font-size: 11px;">
+<table id="provincias" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
     <th>C&oacute;digo</th>
