--- a/app/views/paises/index.html.erb
+++ b/app/views/paises/index.html.erb
@@ -10,6 +10,7 @@
     <th>Descripcion</th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 </thead>
 <tbody>
@@ -17,6 +18,7 @@
   <tr>
     <td><%= pais.codigo %></td>
     <td><%= pais.descripcion %></td>
+    <td><%= link_to '<i class="icon-search icon-black"></i>'.html_safe, pais_provincias_path(pais) %></td>
     <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_pais_path(pais) %></td>
     <td><%= link_to '<i class="icon-remove icon-black"></i>'.html_safe, pais, :class => 'delete_element', method: :delete, data: { confirm: 'Are you sure?' },:remote => true %></td>
   </tr>
