--- a/app/views/provincias/index.html.erb
+++ b/app/views/provincias/index.html.erb
@@ -12,6 +12,7 @@
     <th>Pa&iacute;s</th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 </thead>
 <tbody>
@@ -20,13 +21,14 @@
     <td><%= provincia.codigo %></td>
     <td><%= provincia.descripcion %></td>
     <td><%= provincia.pais.descripcion %></td>
-    <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_provincia_path(provincia) %></td>
-    <td><%= link_to '<i class="icon-remove icon-black"></i>'.html_safe, provincia, :class => 'delete_element', method: :delete, data: { confirm: 'Are you sure?' },:remote => true %></td>
+    <td><%= link_to '<i class="icon-search icon-black"></i>'.html_safe, pais_provincia_localidades_path(@pais,provincia) %></td>
+    <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_pais_provincia_path(@pais,provincia) %></td>
+    <td><%= link_to '<i class="icon-remove icon-black"></i>'.html_safe, pais_provincia_path(@pais,provincia), :class => 'delete_element', method: :delete, data: { confirm: 'Are you sure?' },:remote => true %></td>
   </tr>
 <% end %>
 </tbody>
 </table>
 
-<%= link_to 'Nueva Provincia', new_provincia_path, :class => 'btn btn-info btnNuevo' %>
+<%= link_to 'Nueva Provincia', new_pais_provincia_path(@pais), :class => 'btn btn-info btnNuevo' %>
 </div>
 
