--- a/app/views/licencias/_form.html.erb
+++ b/app/views/licencias/_form.html.erb
@@ -3,10 +3,16 @@
   <div class="form-inputs">
     <%= f.input :serial %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+    <p style="font-weight:bold">Productos</p>
+  <% for producto in Producto.find(:all) %>  
+    <div> 
+      <label class="checkbox">
+        <%= check_box_tag "licencia[producto_ids][]", producto.id, @licencia.productos.include?(producto) %>  
+        <%= producto.descripcion %> 
+      </label> 
+    </div>  
+  <% end %>  
+<div style="text-align:center">
+  <%= f.button :submit, 'Guardar Licencia', :class => 'btn btn-primary' %>  
+</div>
 <% end %>
-
-
