--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -33,5 +33,5 @@
 </tbody>
 </table>
 
-<%= link_to 'Nuevo Cliente', new_cliente_path, :class => 'btn btn-info btnNuevo' %>
+<%= link_to 'Nuevo Cliente', new_cliente_path, :class => 'btn btn-primary' %>
 </div>
