--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -26,6 +26,6 @@
 
 <br />
 
-<%= link_to 'Nuevo Producto', new_producto_path, :class => 'btn btn-info btnNuevo' %>
+<%= link_to 'Nuevo Producto', new_producto_path, :class => 'btn btn-primary' %>
 
 </div>
