--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,17 +7,19 @@
          <span class="icon-bar"></span>
        </a>
        <a class="brand" href="#">Shaman Gesti&oacute;n</a>
-       <div class="btn-group pull-right">
-         <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-           <i class="icon-user"></i> Usuario
-           <span class="caret"></span>
-         </a>
-         <ul class="dropdown-menu">
-           <li><a href="#">Perfil</a></li>
-           <li class="divider"></li>
-           <li><a href="#">Cerrar Sesi&oacute;n</a></li>
-         </ul>
-       </div>
+
+      <ul class="nav pull-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuario <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Perfil</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Cerrar Sesi&oacute;n</a></li>
+              </ul>
+            </li>
+          </ul>
+
+
        <div class="nav-collapse">
          <ul class="nav">
            <li class="active"><a href="#">Home</a></li>
