--- a/app/views/licencias/new.html.erb
+++ b/app/views/licencias/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New licencia</h1>
+<div class="contForm">
+
+<h2>Nueva Licencia</h2>
+
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', licencias_path %>
+</div>
