--- a/app/views/licencias/_form.html.erb
+++ b/app/views/licencias/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for(@licencia) do |f| %>
+
+<%= simple_form_for(@licencia,:html => {:class => 'formCentrado'}) do |f| %>
 
   <div class="form-inputs">
     <%= f.input :serial %>
@@ -11,8 +12,10 @@
         <%= producto.descripcion %> 
       </label> 
     </div>  
-  <% end %>  
-<div style="text-align:center">
+  <% end %> 
+
+<div style="text-align:center;padding-top:50px;padding-bottom:20px">
   <%= f.button :submit, 'Guardar Licencia', :class => 'btn btn-primary' %>  
 </div>
 <% end %>
+
