--- a/app/views/licencias/index.html.erb
+++ b/app/views/licencias/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contenedorPrincipal">
 
-  <h4>Licencias</h4>
+  <h2>Licencias</h2>
   <hr />
 <div style="width:500px;margin-left:auto;margin-right:auto">
 <table id="licencias" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
@@ -15,7 +15,7 @@
 <% @licencias.each do |licencia| %>
   <tr>
     <td><%= licencia.serial %></td>
-    <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_licencia_path(licencia), :remote => true %></td>
+    <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_licencia_path(licencia) %></td>
     <td><%= link_to '<i class="icon-remove icon-black"></i>'.html_safe, licencia, :class => 'delete_element', method: :delete, data: { confirm: 'Desea eliminar la licencia?'} , :remote => true %></td>
   </tr>
 <% end %>
@@ -24,7 +24,7 @@
 </div>
 <br />
 
-<%= link_to 'Nueva Licencia', new_licencia_path, :class => 'btn btn-primary', :remote => true %>
+<%= link_to 'Nueva Licencia', new_licencia_path, :class => 'btn btn-primary' %>
 
 </div>
 
