--- a/app/views/shared/_navigation_bar.html.erb
+++ b/app/views/shared/_navigation_bar.html.erb
@@ -4,8 +4,7 @@
        <div class="well sidebar-nav sidebar-nav-fixed">
          <ul class="nav nav-list">
            <li class="nav-header">SEGURIDAD</li>
-           <li><a href="#">Link</a></li>
-           <li><a href="#">Link</a></li>
+           <li class="<%= 'active' if current_page?('/log') %>"><%= link_to "Visor de Logs", '/log' %></li>
            <li class="nav-header">CLIENTES</li>
            <li class="<%= 'active' if current_page?(clientes_path) %>"><%= link_to "Clientes", clientes_path %></li>
            <li class="<%= 'active' if current_page?(productos_path) %>"><%= link_to "Productos", productos_path %></li>
