--- a/app/views/clientes_contactos/_form.html.erb
+++ b/app/views/clientes_contactos/_form.html.erb
@@ -3,10 +3,10 @@
 <%= simple_form_for([@cliente,@clientes_contacto], :html => {:class => 'formPrincipal'}) do |f| %>
 
   <div class="form-inputs">
-    <%= f.input :nombre %>
+    <%= f.input :nombre, :label => 'Nombre' %>
     <%= f.input :email %>
-    <%= f.input :flgPrincipal %>
-    <%= f.input :telefono %>
+ 	<%= f.input :flgPrincipal, :as => :boolean,:label => false, :inline_label => true %>
+    <%= f.input :telefono, :label => 'Teléfono' %>
   </div>
 
   <div class="form-actions">
