--- a/app/views/shared/_navigation_bar.html.erb
+++ b/app/views/shared/_navigation_bar.html.erb
@@ -10,6 +10,7 @@
            <li class="<%= 'active' if current_page?(clientes_path) %>"><%= link_to "Clientes", clientes_path %></li>
            <li class="<%= 'active' if current_page?(productos_path) %>"><%= link_to "Productos", productos_path %></li>
           <li class="<%= 'active' if current_page?(licencias_path) %>"><%= link_to "Licencias", licencias_path %></li>
+          <li class="<%= 'active' if current_page?(estados_path) %>"><%= link_to "Estados", estados_path %></li>
           <li class="divider"></li>
            <li class="nav-header">ABM</li>
            <li class="<%= 'active' if current_page?(paises_path) %>"><%= link_to "Países", paises_path %></li>
