Clientes quedo bien con contactos, licencias y gestion. Tambien quedo ok tema flgPrincipal

--- a/app/views/clientes_contactos/_form.html.erb
+++ b/app/views/clientes_contactos/_form.html.erb
@@ -5,7 +5,7 @@
   <div class="form-inputs">
     <%= f.input :nombre, :label => 'Nombre' %>
     <%= f.input :email %>
- 	<%= f.input :flgPrincipal, :as => :boolean,:label => false, :inline_label => true %>
+	<%= f.input :flgPrincipal,:label => 'Contacto Principal?', :collection => [['Si', 1], ['No', 0]], :include_blank => false %>
     <%= f.input :telefono, :label => 'Teléfono' %>
   </div>
 
