--- a/app/views/estados/index.html.erb
+++ b/app/views/estados/index.html.erb
@@ -6,7 +6,7 @@
 <table id="estados" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
-    <th>Nro de Estado</th>
+    <th>Nro.</th>
     <th>Estado</th>
     <th></th>
     <th></th>
