--- a/app/views/paises/index.html.erb
+++ b/app/views/paises/index.html.erb
@@ -2,12 +2,12 @@
 
   <h2>Pa&iacute;ses</h2>
   <hr />
-
+<div style="width:700px;margin-left:auto;margin-right:auto">
 <table id="paises" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
     <th>C&oacute;digo</th>
-    <th>Descripcion</th>
+    <th>Descripci&oacute;n</th>
     <th></th>
     <th></th>
     <th></th>
@@ -25,7 +25,7 @@
 <% end %>
 </tbody>
 </table>
-
+</div>
 <%= link_to 'Nuevo Pais', new_pais_path, :class => 'btn btn-primary' %>
 </div>
 
