--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -2,11 +2,11 @@
 
   <h2>Productos</h2>
   <hr>
-
+<div style="width:500px;margin-left:auto;margin-right:auto">
 <table id="productos" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
-    <th>Nro producto</th>
+    <th>Nro.</th>
     <th>Descripcion</th>
     <th></th>
     <th></th>
@@ -23,7 +23,7 @@
 <% end %>
 </tbody>
 </table>
-
+</div>
 <br />
 
 <%= link_to 'Nuevo Producto', new_producto_path, :class => 'btn btn-primary' %>
