--- a/app/views/shared/_navigation_bar.html.erb
+++ b/app/views/shared/_navigation_bar.html.erb
@@ -4,17 +4,14 @@
        <div class="well sidebar-nav sidebar-nav-fixed">
          <ul class="nav nav-list">
            <li class="nav-header">SEGURIDAD</li>
-           <li class="<%= 'active' if current_page?('/log') %>"><%= link_to "Visor de Logs", '/log' %></li>
+           <li class="<%= 'active' if current_page?('/log') %>"><%= link_to "<i class=\"icon icon-play\"></i>  &nbsp; Visor de Logs".html_safe, '/log' %></li>
            <li class="divider"></li>
-           <li class="nav-header">CLIENTES</li>
-           <li class="<%= 'active' if current_page?(clientes_path) %>"><%= link_to "Clientes", clientes_path %></li>
-           <li class="<%= 'active' if current_page?(productos_path) %>"><%= link_to "Productos", productos_path %></li>
-          <li class="<%= 'active' if current_page?(licencias_path) %>"><%= link_to "Licencias", licencias_path %></li>
-          <li class="<%= 'active' if current_page?(estados_path) %>"><%= link_to "Estados", estados_path %></li>
-          <li class="divider"></li>
-           <li class="nav-header">ABM</li>
-           <li class="<%= 'active' if current_page?(paises_path) %>"><%= link_to "Países", paises_path %></li>
-  
+           <li class="nav-header">OPCIONES GENERALES</li>
+           <li class="<%= 'active' if current_page?(clientes_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Clientes".html_safe, clientes_path %></li>
+           <li class="<%= 'active' if current_page?(productos_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Productos".html_safe, productos_path %></li>
+          <li class="<%= 'active' if current_page?(licencias_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Licencias".html_safe, licencias_path %></li>
+          <li class="<%= 'active' if current_page?(estados_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Estados".html_safe, estados_path %></li>
+          <li class="<%= 'active' if current_page?(paises_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Países".html_safe, paises_path %></li>
          </ul>
        </div><!--/.well -->
      </div><!--/span-->
