--- a/app/views/clientes/_licencias.html.erb
+++ b/app/views/clientes/_licencias.html.erb
@@ -5,6 +5,7 @@
 <table id="cliente_licencias" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
+    <th>Nro. Lic.</th>
     <th>Data Source</th>
     <th>Catalog</th>
     <th>User</th>
@@ -16,6 +17,7 @@
 <tbody>
 <% @cliente_licencias.each do |lic| %>
   <tr>
+    <td><%= lic.licencia.serial %></td>
     <td><%= lic.cnn_data_source %></td>
     <td><%= lic.cnn_catalog %></td>
     <td><%= lic.cnn_user %></td>
