Arreglado problema con cliente/contactos. Ver que javi la pruebe

--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -38,13 +38,8 @@
           </div><!--/row-->
 
 
-          <% if current_page?('/clientes/new') 
-            @datos = :clientes_contactos
-         else
-            @datos = :contacto_principal
-         end
-          %>
-          <%= f.simple_fields_for @datos do |p| %>
+
+          <%= f.simple_fields_for :clientes_contactos do |p| %>
         <div class="row-fluid">
           <div class="span4">
            <%= p.input :nombre , input_html: {class: 'span12'}  %>
