--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,5 +1,68 @@
 <div style="background-color:#eeeeee">
-<%= render 'form' %>
+<%= simple_form_for(@cliente, :html => {:class => 'formPrincipal'}) do |f| %>
+
+    <h2 style="text-align:center">Formulario de Registro de Clientes</h2>
+      <hr />
+        <div class="container-fluid">       
+      <div class="row-fluid">
+        <div class="span12">  
+
+          <div class="row-fluid">   
+            <div class="span3">
+              <%= f.input :razonSocial, label: 'Razón Social', input_html: {class: 'span12'} %>           
+            </div><!--/span-->
+            <div class="span3">
+              <%= f.input :dmCalle,label: 'Calle' , input_html: {class: 'span12'} %>   
+            </div><!--/span-->
+            <div class="span2">
+              <%= f.input :dmAltura,label: 'Altura' , input_html: {class: 'span12'} %> 
+            </div><!--/span-->
+            <div class="span2">
+              <%= f.input :dmPiso,label: 'Piso' , input_html: {class: 'span12'} %>    
+            </div><!--/span-->
+            <div class="span2">
+            <%= f.input :dmDepto,label: 'Departamento' , input_html: {class: 'span12'} %>   
+            </div><!--/span-->
+          </div><!--/row-->
+
+          <div class="row-fluid">   
+            <div class="span4">
+              <%= f.input :sitioWeb,label: 'Sitio Web' , input_html: {class: 'span12'} %>          
+            </div><!--/span-->
+            <div class="span4">
+            <%= f.input :dmReferencia,label: 'Referencia' , input_html: {class: 'span12'} %>  
+            </div><!--/span-->
+            <div class="span4">
+            <%= f.input :localidad_id,collection: Localidad.all(order: 'codigo'), label_method: :descripcion, value_method: :id , input_html: {class: 'span12'} %>    
+            </div><!--/span-->
+            
+          </div><!--/row-->
+
+
+     <div class="row-fluid">
+      <div class="span12" style="text-align:center">
+          <%= f.input :fecIngreso,label: 'Fecha de Ingreso' %>
+      </div>
+     </div>
+
+      <div class="row-fluid">
+      <div class="span12" style="text-align:center">
+  <%= f.button :submit, 'Guardar', :class => 'btn btn-success' %>
+      </div>
+     </div>
+
+   </div>
+      </div><!--/row-->
+     
+
+    </div><!--/.fluid-container-->
+ 
+
+
+
+
+
+<% end %>
 <%= render 'contactos' %>
 <%= render 'licencias' %>
 <%= render 'gestiones' %>
