Filtros y vistas de clientes cambiadas.

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,39 +1,26 @@
 <div class="contenedorPrincipal">
 
-  <h2>Clientes</h2>
-  <hr>
+<div class="row-fluid">
+  <div class="span12">  
+    <div class="row-fluid">   
+      <div class="span6">
+        <h2>Clientes</h2>
+      </div>
+      <div class="span6" style="margin-top:17px;text-align:right">
+ <%= select_tag "filtro_principal", options_for_select([["Todos",0], ["Vendidos",1],["En Gestión",2]], "Todos"), input_html: {class: 'span6'} %> 
+ <%= select_tag "filtro_vista", options_for_select([ ["Datos Principales",0], ["Ultima Gestión",1]], "Datos Principales"), input_html: {class: 'span6'} %> 
 
+      </div>
+    </div>
+  </div>
+</div>
 
-<table id="clientes" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
-  <thead>
-  <tr>
-    <th>Raz&oacute;n Social</th>
-    <th>Email</th>
-    <th>Tel&eacute;fono</th>
-    <th>Pa&iacute;s</th>
-    <th>Provincia</th>
-    <th>Localidad</th>
-    <th></th>
-    <th></th>
-  </tr>
-</thead>
-<tbody>
-<% @clientes.each do |cliente| %>
-  <tr>
-    <td><%= cliente.razonSocial %></td>
-    <td><%= cliente.email %></td>
-    <td><%= cliente.telefono %></td>
-    <td><%= cliente.localidad.provincia.pais.descripcion %></td>
-    <td><%= cliente.localidad.provincia.descripcion %></td>
-    <td><%= cliente.localidad.descripcion %></td>
-    <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_cliente_path(cliente) %></td>
-    <td><%= link_to '<i class="icon-remove icon-black"></i>'.html_safe, cliente, :class => 'delete_element', method: :delete, data: { confirm: 'Seguro que desea eliminar el registro?' } %></td>
-  </tr>
-<% end %>
-</tbody>
-</table>
+<hr>
+
+<div id="tablaClientes">
+  <%= render 'tabla_clientes' %>
+</div>
 
 <%= link_to 'Nuevo Cliente', new_cliente_path, :class => 'btn btn-primary' %>
-
 
 </div>
