--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -57,15 +57,10 @@
 
     </div><!--/.fluid-container-->
  
-
-
-
-
-
 <% end %>
 <%= render 'contactos' %>
 <%= render 'licencias' %>
 <%= render 'gestiones' %>
+<%= render 'terminales' %>
 
 </div>
-
