--- a/app/views/licencias_logs/index.html.erb
+++ b/app/views/licencias_logs/index.html.erb
@@ -2,7 +2,7 @@
 
   <h2>Visor de Logs</h2>
   <hr />
-
+<div style="width:70%;margin-left:auto;margin-right:auto">
 <table id="visorLogs" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
   <thead>
   <tr>
@@ -26,5 +26,5 @@
 </tbody>
 </table>
 
-
+</div>
 </div>
