--- a/app/views/clientes_contactos/index.html.erb
+++ b/app/views/clientes_contactos/index.html.erb
@@ -3,7 +3,7 @@
 
   <h2>Contactos</h2>
   <hr />
-  <div style="width:700px;margin-left:auto;margin-right:auto">
+  <div style="width:80%;margin-left:auto;margin-right:auto">
   <table id="vstContactos" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered display">
     <thead>
     <tr>
