--- a/app/views/shared/_navigation_bar.html.erb
+++ b/app/views/shared/_navigation_bar.html.erb
@@ -13,7 +13,7 @@
           <li class="<%= 'active' if current_page?(estados_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Estados".html_safe, estados_path %></li>
           <li class="<%= 'active' if current_page?(paises_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Países".html_safe, paises_path %></li>
           <li class="<%= 'active' if current_page?(clientes_contactos_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Contactos".html_safe, clientes_contactos_path %></li>
-          <li class="<%= 'active' if current_page?(tipo_terminales_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Tipo de Terminales".html_safe, tipo_terminales_path %></li>
+          <li class="<%= 'active' if current_page?(tipo_terminales_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Terminales".html_safe, tipo_terminales_path %></li>
           <li class="<%= 'active' if current_page?(usuarios_path) %>"><%= link_to "<i class=\"icon icon-play\"></i> &nbsp; Usuarios".html_safe, usuarios_path %></li>          
          </ul>
        </div><!--/.well -->
