--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="contenedorPrincipal">
   <%= simple_form_for(@usuario, :html => {:class => 'formPrincipal'}) do |f| %>
-    <h3>Formulario de Registro de Productos</h3>
+    <h3>Registro de Usuarios</h3>
     <hr />
 
     <%= f.input :descripcion, label: 'Usuario' %>
