conexion_servidor en abm

--- a/app/views/clientes_licencias/_form.html.erb
+++ b/app/views/clientes_licencias/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.input :cnn_catalog, :label => 'Catalog' %>
     <%= f.input :cnn_user, :label => 'User' %>
     <%= f.input :cnn_pass, :label => 'Password' %>
+    <%= f.input :conexion_servidor, :label => 'Servidor' %>    
     <%= f.input :fecha_de_vencimiento, :label => 'Fecha de Vencimiento' %>
   </div>
 
