--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -10,6 +10,7 @@
     <th>Descripcion</th>
     <th></th>
     <th></th>
+    <th></th>
   </tr>
 </thead>
 <tbody>
@@ -17,6 +18,7 @@
   <tr>
     <td><%= producto.nro_producto %></td>
     <td><%= producto.descripcion %></td>
+    <td><%= link_to '<i class="icon-search icon-black"></i>'.html_safe, producto_productos_modulos_path(producto) %></td>    
     <td><%= link_to '<i class="icon-pencil icon-black"></i>'.html_safe, edit_producto_path(producto) %></td>
     <td><%= link_to '<i class="icon-remove icon-black"></i>'.html_safe, producto, :class => 'delete_element', method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
